--- a/SurviveMe/SurviveMe/Views/DashboardPage.xaml
+++ b/SurviveMe/SurviveMe/Views/DashboardPage.xaml
@@ -3,35 +3,46 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:d="http://xamarin.com/schemas/2014/forms/design"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:vm="clr-namespace:SurviveMe.ViewModels"
+             xmlns:svc="clr-namespace:SurviveMe.Services"
              mc:Ignorable="d"
              x:Class="SurviveMe.Views.DashboardPage"
-             Title="{Binding Title}"
+             Title="Welcome to CC1 Hussars"
              x:Name="BrowseItemsPage">
-    <ContentPage.ToolbarItems>
-        <ToolbarItem Text="Help" Clicked="AddItem_Clicked" />
-    </ContentPage.ToolbarItems>
-
+    <ContentPage.BindingContext>
+        <vm:DashboardViewModel />
+    </ContentPage.BindingContext>
     <ContentPage.Content>
         <Grid>
             <Grid.RowDefinitions>
-                <RowDefinition Height="0.4*"/>
-                <RowDefinition Height="0.2*"/>
-                <RowDefinition Height="0.4*"/>
+                <RowDefinition Height="100" />
+                <RowDefinition Height="100" />
+                <RowDefinition Height="50" />
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="0.25*"/>
-                <ColumnDefinition Width="0.5*"/>
-                <ColumnDefinition Width="0.25*"/>
+                <ColumnDefinition Width="0.1*" />
+                <ColumnDefinition Width="0.8*" />
+                <ColumnDefinition Width="0.1*" />
             </Grid.ColumnDefinitions>
-
-            <Button
-                Grid.Row="1"
-                Grid.Column="1"
-                Clicked="Button_Clicked"
-                Text="Dial"
-                CornerRadius="10"
-                BackgroundColor="{StaticResource cc1orange}"
-                TextColor="White"/>
+            <Label Grid.Column="1"
+                   Margin="0,50,0,0"
+                   Text="CC1: Hussars"
+                   HorizontalTextAlignment="Center"
+                   TextColor="Black"
+                   FontSize="Large" />
+            <Label Grid.Row="1"
+                   Grid.Column="1"
+                   Text="Use this app to talk and get advice from a buddy. All our volunteers are Mental Health Qualified ex-servicemen"
+                   FontSize="Body"
+                   TextColor="Black"
+                   LineBreakMode="WordWrap" />
+            <Button Grid.Row="2"
+                    Grid.Column="1"
+                    Text="Talk to a veteran"
+                    CornerRadius="10"
+                    BackgroundColor="{StaticResource cc1orange}"
+                    TextColor="White"
+                    Clicked="TalkToVeteranClicked"/>
         </Grid>
     </ContentPage.Content>
 </ContentPage>
