--- a/SurviveMe/SurviveMe/Views/LandingPage.xaml
+++ b/SurviveMe/SurviveMe/Views/LandingPage.xaml
@@ -11,7 +11,7 @@
                 <RowDefinition Height="100" />
                 <RowDefinition Height="100" />
                 <RowDefinition Height="50" />
-                <RowDefinition Height="90" />
+                <RowDefinition Height="70" />
                 <RowDefinition Height="90" />
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
@@ -21,13 +21,13 @@
             </Grid.ColumnDefinitions>
             <Label Grid.Column="1"
                    Margin="0,50,0,0"
-                   Text="Welcome to CC1: Hussars"
+                   Text="Charlie Charlie One"
                    HorizontalTextAlignment="Center"
                    TextColor="Black"
                    FontSize="Large" />
             <Label Grid.Row="1"
                    Grid.Column="1"
-                   Text="Use this app to talk and get advice from a Mental Health First Aid Qualified Ex-serviceman buddy"
+                   Text="This app provides a sage platform for you to talk and gain the support you need. All our volunteer Buddies are Mental Health Qualified ex-servicemen and ex-servicewomen."
                    FontSize="Body"
                    TextColor="Black"
                    LineBreakMode="WordWrap" />
@@ -44,12 +44,23 @@
                     BackgroundColor="{StaticResource cc1orange}"
                     TextColor="White"
                     Command="{Binding ToAuthenticationCommand}" />
-            <Button Grid.Row="4"
-                    Grid.Column="1"
-                    Text="I need help immediately"
-                    CornerRadius="10"
-                    BackgroundColor="{StaticResource cc1grey}"
-                    Command="{Binding ToHelpCommand}" />
+            <Grid Grid.Row="4"
+                  Grid.Column="1">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="0.1*" />
+                    <ColumnDefinition Width="0.9*" />
+                </Grid.ColumnDefinitions>
+                <Image  Source="outline_info.png"
+                        VerticalOptions="Center"/>
+                <Label  Grid.Column="1"
+                        VerticalOptions="Center"
+                        Text="If you need help immediately check our help section">
+                    <Label.GestureRecognizers>
+                        <TapGestureRecognizer Command="{Binding ToHelpCommand}"
+                                              NumberOfTapsRequired="1"></TapGestureRecognizer>
+                    </Label.GestureRecognizers>
+                </Label>
+            </Grid>
         </Grid>
     </ContentPage.Content>
 </ContentPage>
